# data-science

./: .copier-answers.yml  .env.example  .gitignore  DATABASE_CREDENTIALS.md  DOCS_README.md  ESCALA_10K_LOG.md  ESCALA_10K_RESULTADOS_FINAIS.md  ISSUES_IMPLEMENTACAO_CLASSIFICACAO.md  ISSUES_IMPLEMENTACAO_EMBEDDINGS.md  ISSUES_IMPLEMENTACAO_EMBEDDINGS_MIGRACAO_GRADUAL.md  ISSUES_IMPLEMENTACAO_SUMARIZACAO.md  NOVA_CLASSIFICATION_ISSUE.md  POETRY_GUIDE.md  PR_COMPLETE_TEXT.md  PR_TEXT.md  README.md  REPOSITORY_SETUP.md  RESULTADOS_TESTES.md  RESUMO_ISSUES_IMPLEMENTACAO.md  SETUP.md  TESTE_PRAGMATICO_CONCLUIDO.md  VALIDACAO_DOCS_CHECKLIST.md  extract_10k_fixed.sql  extract_10k_simple.sql  fdsfsfsff  pyproject.toml  relatorio_final_issue5.md  render_docs.sh  response.json  teste_rapido.py
.claude/: settings.json
.github/workflows/: canonicalization-job-deploy.yaml  composer-deploy-dags.yaml  enrichment-worker-deploy.yaml  ner-backfill-job-deploy.yaml
_plan/: CANON-QUALITY-FIXES.md  DEDUP-RETROATIVIDADE-ORG.md  PLANO-AIRFLOW-LOCAL.md  PLANO-ENRICHMENT-LLM.md
airflow/: .airflowignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.override.yml  requirements.txt
airflow/.astro/: config.yaml
airflow/plugins/: news_enrichment
benchmarks/: README.md  benchmark_modelos.py  benchmark_prompts.py
dags/: enrich_news_llm.py  requirements.txt
docker/canonicalization-job/: Dockerfile  entrypoint.sh
docker/enrichment-worker/: Dockerfile
docker/ner-backfill-job/: Dockerfile  entrypoint.sh
docs/: README.md  nova_classification_evaluation.md
docs/01_issue1_embeddings/: README_issue1.md  analise_corpus.md  changelog_queries.md  metodologia_metricas.md  queries_expandidas.md  quickstart.md  relatorio_final_issue1.md  roteiro_testes.md
docs/02_issue2_finetuning/: analise_finetuning.md  guia_finetuning.md  relatorio_final_issue2.md
docs/03_issue3_classification/: contexto_projeto.md  log_experimentos_locais.md  modelos_locais.md  relatorio_executivo_final.md  relatorio_tecnico_completo.md  sumario_solucao.md
docs/04_issue4_summarization/: README_issue4.md  fase1_setup_log.md  relatorio_final_issue4.md
docs/05_issue5_rag/: PROPOSTA_SKILL_RAG_SETUP.md  fase4_generation_pipeline.md  fase5_api_rest.md  fase6_sumario.md  fase6_temporalidade.md  migracao_hnsw.md  (+1 more)
news_enrichment/: classifier.py  dataset_manager.py
scripts/: backfill_ner_corpus.py  guardrails_test_results.json  guardrails_test_v2_gov_emails.json  renew_ner_window.py  run_nova_classification_test.py  test_guardrails_demo.py  test_guardrails_local.py  test_nova_classification.py  test_nova_quality_sample.py  test_nova_with_taxonomy.py
tests/: __init__.py  fakedb.py  test_backfill_ner_corpus.py  test_canonicalization.py  test_canonicalization_job.py  test_enrichment.py  test_enrichment_worker.py  test_entrypoint_creds.py  test_ner.py  test_ner_handler.py  test_quota_governor.py  test_wikidata_client.py
(+936 files in other folders)
