[tool.poetry]
name = "data-science"
version = "1.0.0"
description = "Workspace de projetos de Data Science e Machine Learning"
authors = ["Luis Felipe de Moraes <seu-email@exemplo.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/seu-usuario/data-science"
repository = "https://github.com/seu-usuario/data-science"
keywords = ["data-science", "machine-learning", "llm", "nlp", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
packages = [
    {include = "news_enrichment", from = "source/news-enrichment"}
]

[tool.poetry.dependencies]
python = "^3.10"
# Data Processing
polars = "^1.0.0"
pandas = "^2.0.0"
pyyaml = "^6.0"
datasets = "^4.8.0"
huggingface-hub = "^1.7.0"

# AWS & Cloud
boto3 = "^1.34.0"
botocore = "^1.34.0"

# Database
psycopg2-binary = "^2.9.9"

# HTTP & Networking
requests = "^2.31.0"

# Progress & UI
tqdm = "^4.65.0"

# Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

# Optional: Machine Learning (para scripts BERT)
torch = {version = "^2.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

# Code Quality
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.12.0"

# Jupyter
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.poetry.group.docs.dependencies]
# Documentation (Quarto)
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"

[tool.poetry.extras]
ml = ["torch"]
all = ["torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.eggs
  | \.tox
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["source/news-enrichment/tests", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=source.news_enrichment --cov-report=html --cov-report=term"

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Poetry scripts (atalhos úteis)
[tool.poetry.scripts]
news-classify = "news_enrichment.classifier:main"
